@@ -1,4 +1,4 @@
-.TH RESCAN\-SCSI\-BUS.SH "1" "April 2021" "rescan\-scsi\-bus.sh" "User Commands"
+.TH RESCAN\-SCSI\-BUS.SH "1" "January 2022" "rescan\-scsi\-bus.sh" "User Commands"
 .SH NAME
 rescan-scsi-bus.sh \- script to add and remove SCSI devices without rebooting
 .SH SYNOPSIS
